-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.3.0, Lustre 2.4.0, Lustre 2.4.1, Lustre 2.5.0, Lustre 2.6.0, Lustre 2.5.1, Lustre 2.7.0, Lustre 2.5.3
-
3
-
5222
This issue was created by maloo for yujian <yujian@whamcloud.com>
This issue relates to the following test suite run: https://maloo.whamcloud.com/test_sets/aaac51d6-fa70-11e1-887d-52540035b04c.
Lustre Build: http://build.whamcloud.com/job/lustre-b2_3/16
The sub-test test_45 failed with the following error:
Stopping /mnt/mds1 (opts:-f) on client-30vm3
CMD: client-30vm3 umount -d -f /mnt/mds1
CMD: client-30vm3 lsmod | grep lnet > /dev/null && lctl dl | grep ' ST '
sleep 60 sec
CMD: client-30vm6.lab.whamcloud.com lctl set_param fail_loc=0x50f
fail_loc=0x50f
sleep 10 sec
manual umount lustre on /mnt/lustre....
CMD: client-30vm6.lab.whamcloud.com umount -d --force /mnt/lustre
umount2: Device or resource busy
umount: /mnt/lustre: device is busy.
(In some cases useful info about processes that use
the device is found by lsof(8) or fuser(1))
df: umount2: Device or resource busy
conf-sanity test_45: @@@@@@ FAIL: test_45 failed with 3
`/mnt/lustre': Cannot send after transport endpoint shutdown
df: no file systems processed
Info required for matching: conf-sanity 45
- is duplicated by
-
LU-6730 conf-sanity test_45: FAIL: manual_umount_client failed
-
- Resolved
-
- is related to
-
LU-10824 ll_umount being improper use of cached mountpoint from mount time
-
- Reopened
-
-
LU-5213 conf-sanity test_45: umount2: Device or resource busy
-
- Closed
-
- is related to
-
LU-4647
Add idmapping functions for nodemap
-
- Resolved
-
-
LU-10467 use standard linux wait_event macros
-
- Resolved
-
- mentioned in
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...