lustre/tests/conf-sanity.sh
@@ -3209,8 +3209,8 @@ test_45() { #17310
 	df -h $MOUNT &
 	log "sleep 60 sec"
 	sleep 60
-#define OBD_FAIL_PTLRPC_LONG_REPL_UNLINK   0x50f
-	do_facet client "$LCTL set_param fail_loc=0x50f fail_val=0"
+	#define OBD_FAIL_PTLRPC_LONG_REPL_UNLINK	0x50f
+	do_facet client "$LCTL set_param fail_loc=0x8000050f"
 	log "sleep 10 sec"
 	sleep 10
 	manual_umount_client --force || error "manual_umount_client failed"
